[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-genai>=1.49.0",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
]
